<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activityback"
    tools:context=".healthinput">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintDimensionRatio="H,1:0.8" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/dataInputScrollView"
        />

    <ScrollView
        android:id="@+id/dataInputScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/weightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/weight_label"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

            <TextView
                android:id="@+id/bloodPressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/blood_pressure_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

            <EditText
                android:id="@+id/systolicEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/systolic_hint"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                app:layout_constraintEnd_toStartOf="@id/diastolicEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bloodPressureLabel" />

            <EditText
                android:id="@+id/diastolicEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:hint="@string/diastolic_pressure_hint"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/systolicEditText"
                app:layout_constraintTop_toBottomOf="@+id/bloodPressureLabel" />

            <TextView
                android:id="@+id/bodyTemperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/body_temperature"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/systolicEditText" />

            <EditText
                android:id="@+id/bodyTemperatureEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/body_temperature_hint"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodyTemperatureLabel" />

            <TextView
                android:id="@+id/symptomsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/symptoms_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodyTemperatureEditText" />

            <EditText
                android:id="@+id/symptomsEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/body_Symptoms_hint"
                android:inputType="textMultiLine"
                android:minLines="2" android:gravity="top|start" android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/symptomsLabel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp" android:layout_height="53dp"
                android:layout_marginTop="24dp" android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/runded_corner"
                android:backgroundTint="@color/entrance1"
                android:text="@string/save_button_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/symptomsEditText" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="153dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_button"
                android:padding="12dp"
                android:text="Home"
                android:textColor="#FFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveButton"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>