<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@color/entrance"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/User_name"
        android:inputType="text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:textSize="24dp"
        android:background="@drawable/rounded_edited"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Full_Name"
        android:inputType="text"
        android:layout_marginStart="32dp"
        android:textSize="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edited"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edited"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/fullNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="32dp"
        android:textSize="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edited"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/termsAndConditionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agree with Terms and Conditions"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:backgroundTint="@color/entrance"
        android:background="@drawable/runded_corner"
        android:textColor="@android:color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/termsAndConditionsCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/socialMediaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@drawable/insta" />
    </LinearLayout>

    <Button
        android:id="@+id/imauser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I'm already a member"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/entrance"
        android:background="@drawable/runded_corner"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/socialMediaLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pregnant_02_processed"
        android:alpha="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>